# lunchmenu

./: .gitignore  LICENSE  README.md  env.example  package-lock.json  package.json  pyproject.toml
backend/: config.py  main.py  requirements.txt
backend/data/: restaurants.json
backend/models/: restaurant.py
backend/routers/: lunch.py
backend/services/: ai_service.py  kakao_service.py
src/: App.tsx  index.css
src/components/: MapViewer.tsx  RestaurantCard.tsx  RestaurantCardDemo.tsx
src/data/: sampleHistory.ts  sampleRestaurants.ts
src/pages/: FilterPage.tsx  HistoryPage.tsx  Home.tsx  MapPage.tsx  RestaurantDetail.tsx
src/services/: api-examples.ts  api.ts
src/types/: google-map.d.ts  index.ts
